--- a/02_calcularCubo.html
+++ b/02_calcularCubo.html
@@ -6,6 +6,13 @@
     */
 
     //Entrada
+    let inteiro = Number(prompt(`Insira um numero inteiro e direi o cubo dele`));
+
+    function cubo(inteiro){
+        return(inteiro ** 3);
+    }
+    
+    document.write(cubo(inteiro));
 
 
     //Processamento
