--- a/05_areaTriangulo.html
+++ b/05_areaTriangulo.html
@@ -6,6 +6,12 @@
     */
 
     //Entrada
+    let base = Number(prompt(`Qual é o tamanho da base?`));
+    let altura = Number(prompt(`Qual é o tamanho da altura?`));
+    function area(base, altura){
+        return( (base * altura) / 2 )
+    }
+    document.write(`A area do triangulo e ${area(base, altura)}cm2`);
 
 
     //Processamento
