--- a/01_cumprimentar.html
+++ b/01_cumprimentar.html
@@ -7,7 +7,13 @@
     */
 
     //Entrada
+    let usuario = prompt(`Qual o seu nome de usuario?`);
 
+    function userSave(usuario){
+        return(`Bom dia, ${usuario}`)
+    }
+    
+    document.write(userSave(usuario))
 
     //Processamento
 
