--- a/03_conversaoFahrenheit.html
+++ b/03_conversaoFahrenheit.html
@@ -6,6 +6,13 @@
     */
 
     //Entrada
+    let temperatura = Number(prompt(`Insira a temperatura em Graus Celsius e converterei para Fahrenheit`));
+    
+    function conversao(temperatura){
+        return((9 * temperatura + 160) / 5)
+    }
+
+    document.write(`${conversao(temperatura)}°F`);
 
 
     //Processamento
