--- a/04_conversaoCelsius.html
+++ b/04_conversaoCelsius.html
@@ -6,6 +6,13 @@
     */
 
     //Entrada
+    let temperatura = Number(prompt(`Insira a temperatura para converter:`));
+
+    function conversao(temperatura){
+        return((temperatura - 32) * 5 / 9)
+    }
+
+    document.write(`${conversao(temperatura)}°C`);
 
 
     //Processamento
