--- a/06_calculoCirculo.html
+++ b/06_calculoCirculo.html
@@ -8,7 +8,16 @@
     */
 
     //Entrada
+    let raio = Number(prompt(`Insira o tamanho do raio:`));
 
+    function perimetro(raio){
+        return( 2 * Math.PI * raio);
+    };
+    function area(raio){
+        return(Math.PI * (raio ** 2));
+    };
+    
+    document.write(`O perimetro é ${perimetro(raio)} cm <br> A area é ${area(raio)} cm2`);
 
     //Processamento
 
