--- a/11_verificaPrimo.html
+++ b/11_verificaPrimo.html
@@ -5,7 +5,15 @@
     */
 
     //Entrada
-
+    let numero = Number(prompt(`Insira um numero para dizer se ele é primo ou não`));
+    function verificar(numero){
+        let verificado = 0
+        for(i = 1; i <= numero; i++){
+            if(numero%i == 0){ verificado++ }
+        }
+        if(verificado <= 2){ return("Este numero é Primo")} else { return("Este numero não é primo")}
+    }
+    document.write(verificar(numero));
 
     //Processamento
 
